--- a/vsem_calibration_tests/gp_emulator_error_metrics.Rmd
+++ b/vsem_calibration_tests/gp_emulator_error_metrics.Rmd
@@ -216,6 +216,9 @@ $$ \frac{1}{N} \sum_{i = 1}^{N} |\pi_i - \pi(\theta_i)|$$
 
 # Numerical Test (2D input space)
 
+## Setup
+
+### Computer model data
 ```{r}
 # Synthetic data generation
 computer_model_data <- generate_vsem_test_case(4)
@@ -228,7 +231,7 @@ for(output_var in computer_model_data$output_vars) {
 }
 ```
 
-
+### Emulator Settings
 ```{r, echo = FALSE}
 # Emulator settings
 emulator_settings <- data.frame(gp_lib = c("hetGP"), 
@@ -239,6 +242,7 @@ emulator_settings <- data.frame(gp_lib = c("hetGP"),
 print(emulator_settings)
 ```
 
+### Prior distributions on calibration parameters. 
 ```{r, echo = FALSE} 
 # Priors 
 theta_prior_params <- computer_model_data$ref_pars[computer_model_data$pars_cal_sel,]
@@ -250,6 +254,7 @@ theta_prior_params <- theta_prior_params[, c("dist", "param1", "param2")]
 print(theta_prior_params)
 ```
 
+### Prior distributions on variance parameters. 
 ```{r}
 IG_prior_coef_var <- 0.01
 IG_shape <- (1 / IG_prior_coef_var^2) + 2
@@ -274,34 +279,9 @@ for(j in seq_len(ncol(prior_Sig_eps_samples))) {
 
 ```
 
-
-## Run baseline MCMC sampling (no GP approximation). 
-```{r}
-N_mcmc_baseline <- 50000
-samp_baseline <- mcmc_calibrate_product_lik(computer_model_data = computer_model_data, 
-                                            theta_prior_params = theta_prior_params, 
-                                            learn_sig_eps = TRUE,
-                                            sig_eps_prior_params = Sig_eps_prior_params,
-                                            N_mcmc = N_mcmc_baseline,
-                                            adapt_cov_method = "AM", 
-                                            adapt_scale_method = "MH_ratio")
-```
-
-```{r}
-burn_in_baseline <- 10000
-plot(samp_baseline$theta[burn_in_baseline:N_mcmc,1], type="l", main = "Exact MCMC", ylab = colnames(samp_baseline$theta)[1])
-plot(samp_baseline$theta[burn_in_baseline:N_mcmc,2], type="l", main = "Exact MCMC", ylab = colnames(samp_baseline$theta)[2])
-plot(samp_baseline$sig_eps[burn_in_baseline:N_mcmc,1], type="l", main = "Exact MCMC", ylab = paste0("Variance: ", colnames(samp_baseline$sig_eps)[1]))
-plot(samp_baseline$sig_eps[burn_in_baseline:N_mcmc,2], type="l", main = "Exact MCMC", ylab = paste0("Variance: ", colnames(samp_baseline$sig_eps)[2]))
-```
-
-
-## Fit GP emulator. 
-
 ### Design and validation points. 
 ```{r}
 # Design and validation points.
-
 N_train <- 18
 N_test <- 2500
 train_data <- get_input_output_design(N_train, theta_prior_params, computer_model_data = computer_model_data,  
@@ -318,82 +298,47 @@ test_data <- get_input_output_design(N_test, theta_prior_params, computer_model_
                                      na.rm = TRUE) 
 ```
 
-
-### Fit GPs. 
-```{r, echo = FALsE}
-gp_fits <- fit_independent_GPs(X_train = train_data$inputs_scaled, 
-                               Y_train = train_data$outputs_normalized, 
-                               gp_lib = emulator_settings$gp_lib, 
-                               gp_kernel = emulator_settings$kernel)$fits
-```
-
-### Predict at test points.
+## Run calibration algorithms. 
 ```{r}
-if(emulator_settings$transformation_method == "LNP") {
-  output_stats <- train_data$log_output_stats
-} else {
-  output_stats <- train_data$output_stats
-}
-
-gp_pred_list <- predict_independent_GPs(X_pred = test_data$inputs_scaled, gp_obj_list = gp_fits, gp_lib = emulator_settings$gp_lib, 
-                                        denormalize_predictions = TRUE, output_stats = output_stats)
-```
-
-
-### Plot GPs, with respect to samples from true posterior. 
-```{r}
- # Plot GPs. 
-for(j in seq_along(gp_pred_list)) {
-
-  gp_plot <- plot_gp_fit_2d(test_data$inputs, test_data$outputs[,j], train_data$inputs, 
-                            post_samples = samp_baseline$theta[burn_in_baseline:N_mcmc,], 
-                            true_theta = computer_model_data$theta_true,
-                            train_data$outputs[,j], gp_pred_list[[j]]$mean,
-                            gp_pred_list[[j]]$var, xlab = colnames(samp_baseline$theta)[1], ylab = colnames(samp_baseline$theta)[2],
-                            main_title = paste0(computer_model_data$output_vars[j], " GP Predictive Density; Contours of True Posterior"),
-                            transformation_method = emulator_settings$transformation_method)
-  print(gp_plot)
-}
-```
-
-
-### Assemble GP information list. 
-```{r}
-# TODO: make functions "get_gp_emulator_info_list()" and automatically have this function set `gp_output_stats` to the correct transformed version. 
-emulator_info <- list(gp_fits = gp_fits, 
-                      input_bounds = train_data$input_bounds,
-                      output_stats = output_stats, 
-                      settings = emulator_settings)
-```
-
-
-# Approximate Calibration with GP Emulators.
-```{r}
+N_mcmc_exact <- 50000
 N_mcmc_approx <- 50000
-samp_approx <- mcmc_calibrate_ind_GP(computer_model_data = computer_model_data, 
-                                     theta_prior_params = theta_prior_params, 
-                                     emulator_info = emulator_info, 
-                                     learn_sig_eps = TRUE, 
-                                     sig_eps_prior_params = Sig_eps_prior_params, 
-                                     Cov_prop_init_diag = c(0.01, 0.01),
-                                     N_mcmc = N_mcmc_approx)
+calibration_comparison_list <- run_calibration_emulator_comparison(computer_model_data = computer_model_data, 
+                                                                   theta_prior_params = theta_prior_params, 
+                                                                   emulator_settings = emulator_settings, 
+                                                                   train_data = train_data, 
+                                                                   test_data = test_data, 
+                                                                   learn_sig_eps = TRUE, 
+                                                                   sig_eps_prior_params = Sig_eps_prior_params,
+                                                                   N_mcmc_exact = 50000, N_mcmc_approx = 50000)
 ```
 
+```{r}
+samp_baseline <- calibration_comparison_list$samp_mcmc_exact
+samp_approx <- calibration_comparison_list$mcmc_approx_list[[1]]$samp_mcmc
+```
+
+### Check MCMC performance. 
+```{r}
+burn_in_baseline <- 10000
+plot(samp_baseline$theta[burn_in_baseline:N_mcmc_exact,1], type="l", main = "Exact MCMC", ylab = colnames(samp_baseline$theta)[1])
+plot(samp_baseline$theta[burn_in_baseline:N_mcmc_exact,2], type="l", main = "Exact MCMC", ylab = colnames(samp_baseline$theta)[2])
+plot(samp_baseline$sig_eps[burn_in_baseline:N_mcmc_exact,1], type="l", main = "Exact MCMC", ylab = paste0("Variance: ", colnames(samp_baseline$sig_eps)[1]))
+plot(samp_baseline$sig_eps[burn_in_baseline:N_mcmc_exact,2], type="l", main = "Exact MCMC", ylab = paste0("Variance: ", colnames(samp_baseline$sig_eps)[2]))
+```
 ```{r}
 burn_in_approx <- 10000
-plot(samp_approx$theta[burn_in_approx:N_mcmc,1], type="l", main = "Approx MCMC", ylab = colnames(samp_approx$theta)[1])
-plot(samp_approx$theta[burn_in_approx:N_mcmc,2], type="l", main = "Approx MCMC", ylab = colnames(samp_approx$theta)[2])
-plot(samp_approx$sig_eps[burn_in_approx:N_mcmc,1], type="l", main = "Approx MCMC", ylab = paste0("Variance: ", colnames(samp_approx$sig_eps)[1]))
-plot(samp_approx$sig_eps[burn_in_approx:N_mcmc,2], type="l", main = "Approx MCMC", ylab = paste0("Variance: ", colnames(samp_approx$sig_eps)[2]))
+plot(samp_approx$theta[burn_in_approx:N_mcmc_approx,1], type="l", main = "Approx MCMC", ylab = colnames(samp_approx$theta)[1])
+plot(samp_approx$theta[burn_in_approx:N_mcmc_approx,2], type="l", main = "Approx MCMC", ylab = colnames(samp_approx$theta)[2])
+plot(samp_approx$sig_eps[burn_in_approx:N_mcmc_approx,1], type="l", main = "Approx MCMC", ylab = paste0("Variance: ", colnames(samp_approx$sig_eps)[1]))
+plot(samp_approx$sig_eps[burn_in_approx:N_mcmc_approx,2], type="l", main = "Approx MCMC", ylab = paste0("Variance: ", colnames(samp_approx$sig_eps)[2]))
 ```
 
-# Comparing Exact and Approximate Samples
-
-## Calibration Parameters
+## Comparing Exact and Approximate Samples
+### Calibration Parameters
 ```{r}
 # Histograms.
 for(j in 1:ncol(samp_baseline$theta)) {
-  hist_plot <- get_hist_plot(list(samp_baseline$theta[burn_in_baseline:N_mcmc_baseline,], samp_approx$theta[burn_in_approx:N_mcmc_approx,]), 
+  hist_plot <- get_hist_plot(list(samp_baseline$theta[burn_in_baseline:N_mcmc_exact,], samp_approx$theta[burn_in_approx:N_mcmc_approx,]), 
                              col_sel = j, bins = 50, xlab = computer_model_data$pars_cal_name[j],
                              main_title = "Histogram of MCMC Samples: theta", data_names = c("True", "Approx"), 
                              vertical_line = computer_model_data$theta_true[j])
@@ -402,12 +347,11 @@ for(j in 1:ncol(samp_baseline$theta)) {
 
 ```
 
-
-## Variance Parameters
+### Variance Parameters
 ```{r}
 # Histograms.
 for(j in 1:ncol(samp_baseline$sig_eps)) {
-  hist_plot <- get_hist_plot(list(samp_baseline$sig_eps[burn_in_baseline:N_mcmc_baseline,], samp_approx$sig_eps[burn_in_approx:N_mcmc_approx,]), 
+  hist_plot <- get_hist_plot(list(samp_baseline$sig_eps[burn_in_baseline:N_mcmc_exact,], samp_approx$sig_eps[burn_in_approx:N_mcmc_approx,]), 
                              col_sel = j, bins = 50, xlab = colnames(samp_baseline$sig_eps)[j],
                              main_title = "Histogram of MCMC Samples: sig2", data_names = c("True", "Approx"), 
                              vertical_line = diag(computer_model_data$Sig_eps)[j])
@@ -415,6 +359,56 @@ for(j in 1:ncol(samp_baseline$sig_eps)) {
 }
 
 ```
+
+### GP predictive density plots, with overlayed contours of true posterior. 
+#### At test points, generated from prior. 
+```{r}
+
+gp_pred_list <- calibration_comparison_list$mcmc_approx_list[[1]]$gp_pred_list
+
+ # Plot GPs. 
+for(j in seq_along(gp_pred_list)) {
+  
+  gp_plot <- plot_gp_fit_2d(X_test = test_data$inputs, 
+                            X_train = train_data$inputs, 
+                            y_test = test_data$outputs[,j], 
+                            gp_mean_pred = gp_pred_list[[j]]$mean, 
+                            gp_var_pred = gp_pred_list[[j]]$var, 
+                            post_samples = samp_baseline$theta[burn_in_baseline:N_mcmc_exact,],
+                            true_theta = computer_model_data$theta_true,
+                            xlab = colnames(samp_baseline$theta)[1], 
+                            ylab = colnames(samp_baseline$theta)[2], 
+                            main_title = paste0(computer_model_data$output_vars[j], 
+                                                " GP Predictive Density; Contours of True Posterior"),
+                            transformation_method = emulator_settings$transformation_method, 
+                            raster = TRUE)
+  print(gp_plot)
+}
+```
+
+#### At test points, generated from true posterior. 
+```{r}
+nlpd_err_list <- estimate_integrated_neg_log_pred_density_err(computer_model_data, 
+                                                              theta_samples_post = samp_baseline$theta[burn_in_baseline:N_mcmc_exact,], 
+                                                              emulator_info = calibration_comparison_list$mcmc_approx_list[[1]]$emulator_info)
+```
+
+```{r}
+gp_plot <- plot_gp_fit_2d(X_test = samp_baseline$theta[burn_in_baseline:N_mcmc_exact,],
+                          post_samples = samp_baseline$theta[burn_in_baseline:N_mcmc_exact,],
+                          true_theta = computer_model_data$theta_true, 
+                          xlab = colnames(samp_baseline$theta)[1], 
+                          ylab = colnames(samp_baseline$theta)[2], 
+                          main_title = "SSR GP Predictive Density at Posterior Samples; Contours of True Posterior", 
+                          log_predictive_density = -nlpd_err_list$neg_log_pred_density)
+
+print(gp_plot)
+
+```
+
+
+
+
 
 ```{r}
 # 2d KDE contour plots. 
